--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -86,7 +86,7 @@ steps:
     echo "/workspace/changed_categories.txt"
     cat /workspace/changed_categories.txt
     change=$(cat /workspace/changed_categories.txt)
-    if [[ "${change}" == "cluster" || "${change}" == "microservices" || "${change}" == "modules" ]]; then
+    if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]]; then
       if ! terraform fmt -diff=true -check=true -recursive "$(cat /workspace/changed_categories.txt)"; then 
         echo "Please run terraform fmt"
         exit 1 
@@ -100,7 +100,7 @@ steps:
   - '-c' 
   - |
     change=$(cat /workspace/changed_categories.txt)
-    if [[ "${change}" == "cluster" || "${change}" == "microservices"]] && [[ "$BRANCH_NAME" != "main" ]]; then
+    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ "$BRANCH_NAME" != "main" ]]; then
       for dir in $(grep -v '\.' /workspace/changed_directories.txt);
         cd "${dir}"
         terraform init -input=false
@@ -118,12 +118,12 @@ steps:
     - '-c' 
     - |
       change=$(cat /workspace/changed_categories.txt)
-      if [[ "${change}" == "cluster" || "${change}" == "microservices" || "${change}" == "modules" ]] && [[ "$BRANCH_NAME" != "main" ]]; then
+      if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]] && [[ "$BRANCH_NAME" != "main" ]]; then
         conftest test --namespace tf $(cat /workspace/changed_tf_files.txt)
         if [[ -f /workspace/tf_plans.txt ]]; then
           conftest test --namespace plan $(cat /workspace/tf_plans.txt)
         fi
-      elif [[ "${change}" == "policy" ]]; then
+      elif [[ ${change} == "policy" ]]; then
         conftest verify
       fi
 
@@ -134,7 +134,7 @@ steps:
   - '-c' 
   - |
     change=$(cat /workspace/changed_categories.txt)
-    if [[ "${change}" == "cluster" || "${change}" == "microservices"]] && [[ "$BRANCH_NAME" == "main" ]] ; then
+    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ "$BRANCH_NAME" == "main" ]] ; then
       for dir in $(cat /workspace/changed_directories.txt); do
         cd "${dir}"
         terraform init -input=false
