--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -47,7 +47,7 @@ steps:
   args:
   - '-c'
   - |
-    if [ "$BRANCH_NAME" == "main" ] ; then
+    if [[ "$BRANCH_NAME" == "main" ]] ; then
       git diff --name-only "HEAD^" "HEAD" . > /workspace/changed_files.txt
     else
       git diff --name-only "$(git merge-base origin/main HEAD)" . > /workspace/changed_files.txt 
@@ -100,7 +100,7 @@ steps:
   - '-c' 
   - |
     change=$(cat /workspace/changed_categories.txt)
-    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ $BRANCH_NAME != "main" ]]; then
+    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ ${BRANCH_NAME} != "main" ]]; then
       for dir in $(grep -v '\.' /workspace/changed_directories.txt);
         cd "${dir}"
         terraform init -input=false
@@ -134,7 +134,7 @@ steps:
   - '-c' 
   - |
     change=$(cat /workspace/changed_categories.txt)
-    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ $BRANCH_NAME == "main" ]] ; then
+    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ $BRANCH_NAME == "main" ]]; then
       for dir in $(cat /workspace/changed_directories.txt); do
         cd "${dir}"
         terraform init -input=false
