--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -100,7 +100,10 @@ steps:
   - '-c' 
   - |
     change=$(cat /workspace/changed_categories.txt)
-    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ "$BRANCH_NAME" != "main" ]]; then
+    if [[ "$BRANCH_NAME" == "main" ]]; then
+      exit 0;
+    fi
+    if [[ ${change} == "cluster" || ${change} == "microservices"]]; then
       for dir in $(grep -v '\.' /workspace/changed_directories.txt);
         cd "${dir}"
         terraform init -input=false
@@ -118,7 +121,10 @@ steps:
     - '-c' 
     - |
       change=$(cat /workspace/changed_categories.txt)
-      if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]] && [[ "$BRANCH_NAME" != "main" ]]; then
+      if [[ "$BRANCH_NAME" == "main" ]]; then
+        exit 0;
+      fi
+      if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]]; then
         conftest test --namespace tf $(cat /workspace/changed_tf_files.txt)
         if [[ -f /workspace/tf_plans.txt ]]; then
           conftest test --namespace plan $(cat /workspace/tf_plans.txt)
@@ -134,7 +140,10 @@ steps:
   - '-c' 
   - |
     change=$(cat /workspace/changed_categories.txt)
-    if [[ ${change} == "cluster" || ${change} == "microservices"]] && [[ "$BRANCH_NAME" == "main" ]]; then
+    if [[ "$BRANCH_NAME" != "main" ]]; then
+      exit 0;
+    fi
+    if [[ ${change} == "cluster" || ${change} == "microservices"]]; then
       for dir in $(cat /workspace/changed_directories.txt); do
         cd "${dir}"
         terraform init -input=false
