--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -103,8 +103,9 @@ steps:
   - |
     change=$(cat /workspace/changed_categories.txt)
     if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]]; then
-      for dir in $(grep -v '\.' /workspace/changed_directories.txt);
-        cd $${dir}
+      for dir in $(grep -v '\.' /workspace/changed_directories.txt)
+      do
+        cd "${dir}"
         terraform init -input=false
         terraform validate
         terraform plan -input=false --out plan.out 2>&1 terraform show -json plan.out > plan.out.json
@@ -149,8 +150,9 @@ steps:
       exit 0;
     fi
     if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]]; then
-      for dir in $(cat /workspace/changed_directories.txt); do
-        cd $${dir}
+      for dir in $(cat /workspace/changed_directories.txt)
+      do
+        cd "${dir}"
         terraform init -input=false
         terraform validate
         terraform apply -auto-approve -input=false
