--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -115,6 +115,26 @@ steps:
       exit 0
     fi
 
+- id: 'Run tflint'
+  name: 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloudbuild-cicd-test/builder'
+  entrypoint: 'bash' 
+  args:
+  - '-c' 
+  - |
+    change=$(cat /workspace/changed_categories.txt)
+    if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]]; then
+      for dir in $(grep -v '\.' /workspace/changed_directories.txt)
+      do
+        cd "${dir}"
+        terraform init -var 'project_id=$PROJECT_ID'
+        tflint --config=.tflint.hcl --loglevel=info --module
+        cd /workspace
+      done
+    else
+      echo "Skipped tflint"
+      exit 0
+    fi
+    
 - id: 'Conftest'
   name: 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloudbuild-cicd-test/builder' 
   entrypoint: 'bash' 
