--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -147,13 +147,12 @@ steps:
         exit 0;
       fi
       if [[ ${change} == "cluster" || ${change} == "microservices" || ${change} == "modules" ]]; then
-        for plan_file_dir in $(grep -v '\.' /workspace/tf_plans.txt)
-        do
-          conftest test --namespace tf $(cat ${plan_file_dir})
-          if [[ -f /workspace/tf_plans.txt ]]; then
-            conftest test --namespace plan $(cat ${plan_file_dir})
-          fi
-        done
+        echo "conftest test --namespace tf ..."
+        conftest test --namespace tf $(cat /workspace/changed_tf_files.txt)
+        if [[ -f /workspace/tf_plans.txt ]]; then
+          echo "conftest test --namespace plan ..."
+          conftest test --namespace plan $(cat /workspace/tf_plans.txt)
+        fi
       elif [[ ${change} == "policy" ]]; then
         conftest verify
       else
